--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.0",
+    "@angular-devkit/build-angular": "^0.1101.4",
     "@angular/cli": "~11.1.0",
     "@angular/compiler-cli": "~11.1.0",
     "@testing-library/cypress": "^7.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "cypress": "^6.3.0",
+    "cypress": "^6.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
